--- a/website/src/app/features/landing-layout/landing-layout.component.scss
+++ b/website/src/app/features/landing-layout/landing-layout.component.scss
@@ -68,10 +68,10 @@
 
 
 .chart {
-  background-color: #f5ebeb;
+  // background-color: #f5ebeb;
   text-align: center;
   .chartimg {
-    margin-top: 2rem;
+    // margin-top: 2rem;
     height: 40rem;
   }
 }
