--- a/website/src/app/features/landing-layout/components/gallery/gallery.component.scss
+++ b/website/src/app/features/landing-layout/components/gallery/gallery.component.scss
@@ -1,13 +1,16 @@
 .gallery {
-  background-color: #f5ebeb;
+//   background-color: #f5ebeb;
+background-color: #ecb3b9;
   .container-fluid {
     .row {
+        background-color: #ecb3b9;
       .text-center {
-        margin-top: 5rem;
+        margin-top: 4rem;
+        margin-bottom: 2rem;
         font-family: Champion Gothic;
         font-size: 50px;
         color: #aa0806;
-        background-color: #ecb3b9;
+        // background-color: #ecb3b9;
       }
     }
     .imgrow {
@@ -15,6 +18,7 @@
       .img-fluid {
         height: 20rem;
         padding: 10px;
+        margin-bottom: 2rem;
       }
     }
   }
