--- a/website/src/app/features/donateblood/donateblood.component.scss
+++ b/website/src/app/features/donateblood/donateblood.component.scss
@@ -127,6 +127,10 @@
       color: #fff;
     }
   }
+  .error-message {
+    color: red;
+    margin-bottom: 2rem;
+  }
 }
 
 @media (max-width: 1225px) {
