changes in profile

--- a/App/src/app/auth/change-password/change-password.page.html
+++ b/App/src/app/auth/change-password/change-password.page.html
@@ -12,18 +12,18 @@
 
 <ion-content [fullscreen]="true">
   <ion-content [fullscreen]="true">
-    <form [formGroup]="changepasswordForm">
+    <form [formGroup]="changePasswordForm">
       <ion-item>
         <ion-grid>
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item fill="outline" class="input">
-                <ion-label position="floating" lablePlacement="stacked"
+                <ion-label  lablePlacement="stacked"
                   >New Password</ion-label
                 >
                 <ion-input
                   placeholder="New Password"
-                  formControlName="newpassword"
+                  formControlName="newPassword"
                 ></ion-input>
               </ion-item>
             </ion-col>
@@ -31,10 +31,10 @@
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col size="12">
               <ion-item fill="outline" class="input">
-                <ion-label position="floating" lablePlacement="stacked"
+                <ion-label  lablePlacement="stacked"
                   >Confirm Password</ion-label
                 >
-                <ion-input placeholder="Confirm Password" formControlName="confirmpassword"></ion-input>
+                <ion-input placeholder="Confirm Password" formControlName="confirmPassword"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -45,7 +45,7 @@
                 shape="round"
                 class="button ion-padding"
                 color="primary"
-                
+                (click)="onSubmit()"
                 >Submit</ion-button
               >
             </ion-col>
