--- a/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
+++ b/App/src/app/auth/edit-profile/edit-profile/edit-profile.page.html
@@ -14,9 +14,9 @@
             <ion-row class="ion-justify-content-center">
               <ion-col size="11">
                 <ion-item class="input-class">
-                  <i class="ion-padding-horizontal fa-solid fa-circle-user"></i>
+                  
                   <ion-input
-                    
+                  label="First Name"
                     formControlName="firstName"
                   >
                   </ion-input>
@@ -27,10 +27,10 @@
             <ion-row class="ion-align-items-center ion-justify-content-center">
               <ion-col size="11">
                 <ion-item class="input-class">
-                  <i class="ion-padding-horizontal fa-solid fa-user"></i>
+                  
                   <ion-input
-                    labelPlacement="stacked"
-                    
+                   
+                    label="Last Name"
                     formControlName="lastName"
                   >
                   </ion-input>
@@ -43,10 +43,10 @@
             >
               <ion-col size="11">
                 <ion-item class="input-class">
-                  <i class="ion-padding-horizontal fa-solid fa-envelope"></i>
+                 
                   <ion-input
-                    labelPlacement="stacked"
-                  
+                   
+                    label="Email"
                     formControlName="email"
                   >
                   </ion-input>
@@ -59,12 +59,10 @@
             >
               <ion-col size="11">
                 <ion-item class="input-class">
-                  <i
-                    class="ion-padding-horizontal fa-solid fa-mobile-retro"
-                  ></i>
-                  <ion-input
-                    labelPlacement="stacked"
                   
+                  <ion-input
+                   
+                    label="Mobile"
                     formControlName="mobileNo"
                   >
                   </ion-input>
@@ -79,7 +77,6 @@
                 <ion-item class="input-class">
                   <ion-input
                     label="State"
-                    labelPlacement="stacked"
                    
                     placeholder="state"
                     formControlName="state"
@@ -96,7 +93,7 @@
                 <ion-item class="input-class">
                   <ion-input
                     label="City"
-                    labelPlacement="stacked"
+                   
                  
                     placeholder="city"
                     formControlName="city"
