--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.scss
@@ -45,6 +45,8 @@ ion-card {
   
   }
   .align-status
-  {margin-top: 17px;
+  {
+    margin-top: 17px;
     display: flex;
-    justify-content: end;}
+    justify-content: end;
+  }
